feature - mongoDB nuvem conectado

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/Uol
+spring.data.mongodb.uri=mongodb+srv://NoName:12345@uol.k0rnln1.mongodb.net/Uol
+
