--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.data.mongodb.uri=mongodb+srv://NoName:12345@uol.k0rnln1.mongodb.net/Uol
-
+springdoc.swagger-ui.path=/swagger-ui.html
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+url.security = 	http://localhost:8080/
+server.port=9090
+jwt.secret = No-Name/Uol
+jwt.expiration = 300000
